--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   
   camera: ^0.9.4+5
   qr_code_scanner: ^1.0.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.12.0
   font_awesome_flutter: ^10.5.0
   google_fonts: ^6.1.0
   qr_flutter: ^4.1.0
@@ -51,6 +51,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   promptpay_qrcode_generate: ^1.0.2
+  dcdg: ^4.1.0
 
 dev_dependencies:
   flutter_test:
